[project]
name = "test-reflex"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pantelis Monogioudis", email = "pantelis.monogioudis@aegean.ai" }
]
dependencies = [
    "reflex>=0.6.7",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "gradio>=5.9.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mylib"]
